--- a/MarketApp.postman_collection.json
+++ b/MarketApp.postman_collection.json
@@ -16,7 +16,7 @@
 							"pm.test(\"Status code is 200\", function () {",
 							"    pm.response.to.have.status(200);",
 							"});",
-							"pm.test(\"Test for responsee\", function () {",
+							"pm.test(\"Test for response\", function () {",
 							"    var jsonData = pm.response.json();",
 							"    var jsonExpected = {",
 							"        \"id\": 1,",
@@ -66,6 +66,123 @@
 		},
 		{
 			"name": "Buscar Categoria por id inexistente",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"id": "3b7f95b5-db0b-4a92-8569-cdc6cec34245",
+						"exec": [
+							"pm.test(\"Status code is 404\", function () {",
+							"    pm.response.to.have.status(404);",
+							"});"
+						],
+						"type": "text/javascript"
+					}
+				}
+			],
+			"request": {
+				"method": "GET",
+				"header": [],
+				"url": {
+					"raw": "http://localhost:8080/categorias/3",
+					"protocol": "http",
+					"host": [
+						"localhost"
+					],
+					"port": "8080",
+					"path": [
+						"categorias",
+						"3"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Buscar Cliente por id",
+			"event": [
+				{
+					"listen": "test",
+					"script": {
+						"id": "3b7f95b5-db0b-4a92-8569-cdc6cec34245",
+						"exec": [
+							"pm.test(\"Status code is 200\", function () {",
+							"    pm.response.to.have.status(200);",
+							"});",
+							"pm.test(\"Test for response\", function () {",
+							"    var jsonData = pm.response.json();",
+							"    var jsonExpected = {",
+							"        \"id\": 1,",
+							"        \"nome\": \"Maria Silve\",",
+							"        \"email\": \"maria@gmail.com\",",
+							"        \"cpfOuCnpj\": \"36378912377\",",
+							"        \"tipo\": \"PESSOAFISICA\",",
+							"        \"enderecos\": [",
+							"            {",
+							"                \"id\": 1,",
+							"                \"logradouro\": \"Rua Flores\",",
+							"                \"numero\": \"300\",",
+							"                \"complemento\": \"Apto 203\",",
+							"                \"bairro\": \"Jardim\",",
+							"                \"cep\": \"38220834\",",
+							"                \"cidade\": {",
+							"                    \"id\": 1,",
+							"                    \"nome\": \"Uberlândia\",",
+							"                    \"estado\": {",
+							"                        \"id\": 1,",
+							"                        \"nome\": \"Minas Gerais\"",
+							"                    }",
+							"                }",
+							"            },",
+							"            {",
+							"                \"id\": 2,",
+							"                \"logradouro\": \"Avenida Matos\",",
+							"                \"numero\": \"105\",",
+							"                \"complemento\": \"Sala 800\",",
+							"                \"bairro\": \"Centro\",",
+							"                \"cep\": \"38777012\",",
+							"                \"cidade\": {",
+							"                    \"id\": 2,",
+							"                    \"nome\": \"São Paulo\",",
+							"                    \"estado\": {",
+							"                        \"id\": 2,",
+							"                        \"nome\": \"São Paulo\"",
+							"                    }",
+							"                }",
+							"            }",
+							"        ],",
+							"        \"telefones\": [",
+							"            \"27363323\",",
+							"            \"93838393\"",
+							"        ]",
+							"    }",
+							"    pm.expect(jsonData).to.eql(jsonExpected);",
+							"});"
+						],
+						"type": "text/javascript"
+					}
+				}
+			],
+			"request": {
+				"method": "GET",
+				"header": [],
+				"url": {
+					"raw": "http://localhost:8080/clientes/1",
+					"protocol": "http",
+					"host": [
+						"localhost"
+					],
+					"port": "8080",
+					"path": [
+						"clientes",
+						"1"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Buscar Cliente  por id inexistente",
 			"event": [
 				{
 					"listen": "test",
